--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Biblioteca</h1>
+      <p>Bienvenido, esta es mi biblioteca personal en la que subire mis escritos sobre todo lo aprendido a lo largo de mi vida, especialmente 
+          sobre ingenieria de telecomunicaciones y su forma de llevarlas a cabo material y matematicamente. La finalidad de esta web es aportar mi
+          granito de arena a la informacion libre universal de forma totalmente gratuita especialmente a la comunidad hispano-hablante. 
+          Traducire, sintetizare y utilizare la dialectica.
+      </p>
+    
+            <button>Circuitos</button>
+             <button>Sistemas lineales</button>
 </body>
 </html>
