--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
           granito de arena a la informacion libre universal de forma totalmente gratuita especialmente a la comunidad hispano-hablante. 
           Traducire, sintetizare y utilizare la dialectica.
       </p>
-    
-            <button>Circuitos</button>
-             <button>Sistemas lineales</button>
+       <ul>
+            <li>Circuitos</li>
+             <li>Sistemas lineales</li>
+       </ul>
 </body>
 </html>
