--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
           Traducire, sintetizare y utilizare la dialectica.
       </p>
        <ul>
-            <li>Circuitos</li>
-             <li>Sistemas lineales</li>
+            <li>
+                <a href="https://github.com">Sistemas</a>
+            </li>
+            <li>
+                <a href="https://github.com">Electrónica</a>
+            </li>
+            <li> 
+                <a href="https://github.com">Acustica</a>
+           </li>
        </ul>
 </body>
 </html>
