--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="https://github.com">Electrónica</a>
             </li>
             <li> 
-                <a href="https://github.com">Acustica</a>
+                <a href="https://github.com/Acustica">Acustica</a>
            </li>
        </ul>
 </body>
