--- a/Página-1.html
+++ b/Página-1.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Página 1">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="https://website870829.nicepage.io/Página-1.html?version=cfa075ec-3d55-40d6-baa9-ad72b372bfa7" data-home-page-title="Página 1" class="u-body"><header class="u-clearfix u-header u-header" id="sec-446f"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-446f"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
