pruebas de estilo

--- a/index.html
+++ b/index.html
@@ -8,20 +8,32 @@
 </head>
 
 <body>
-  <p>Bienvenido, esta es mi biblioteca personal en la que subire mis escritos sobre todo lo aprendido a lo largo de mi vida, especialmente 
-    sobre ingenieria de telecomunicaciones y su forma de llevarlas a cabo material y matematicamente. La finalidad de esta web es aportar mi
-    granito de arena a la informacion libre universal de forma totalmente gratuita especialmente a la comunidad hispano-hablante. 
-    Traducire, sintetizare y utilizare la dialectica.</p>
-  <ul>
-    <li>
-        <a href="https://github.com">Sistemas</a>
-    </li>
-    <li>
-        <a href="https://github.com">Electrónica</a>
-    </li>
-    <li> 
-        <a href="https://de4dcry.github.io/Biblioteca/Acustica">Acustica</a>
-   </li>
-</ul>
+
+    <!-- HEADER -->
+	<div class="container">
+		<div class="Intro">
+                    <h1>La biblioteca</h1>
+					<h2>Bienvenido,</h2>
+                    <p>Esta es mi biblioteca personal en la que subire mis escritos sobre todo lo aprendido a lo largo de mi vida, especialmente 
+                            sobre ingenieria de telecomunicaciones y su forma de llevarlas a cabo material y matematicamente. La finalidad de esta web es aportar mi
+                            granito de arena a la informacion libre universal de forma totalmente gratuita especialmente a la comunidad hispano-hablante. 
+                            Traducire, sintetizare y utilizare la dialectica.</p>
+		</div>
+	</div>
+	<!-- /HEADER -->
+    <div class="container">
+        <h2>Contenido</h2>
+        <ul>
+            <li>
+              <a href="https://github.com">Sistemas</a>
+            </li>
+            <li>
+                <a href="https://github.com">Electrónica</a>
+            </li>
+            <li> 
+                <a href="https://de4dcry.github.io/Biblioteca/Acustica">Acustica</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
