--- a/Acústica/Altavoces/index.html
+++ b/Acústica/Altavoces/index.html
@@ -23,13 +23,7 @@
         <h2>Contenido</h2>
         <ul>
             <li>
-              <a href="https://de4dcry.github.io/Biblioteca/Acustica/Altavoces">Altavoces</a>
-            </li>
-            <li>
-                <a href="https://de4dcry.github.io/Biblioteca/Acustica/Microfonos">Electrónica</a>
-            </li>
-            <li> 
-                <a href="https://de4dcry.github.io/Biblioteca/Acustica">Acustica</a>
+              <a href="https://de4dcry.github.io/Biblioteca/Acustica/Altavoces/Altavoces_Multivia">Altavoces Multivia</a>
             </li>
         </ul>
     </div>
