--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li> 
                 <a href="https://de4dcry.github.io/Biblioteca/Acustica">Acustica</a>
             </li>
+	     <li> 
+                <a href="https://de4dcry.github.io/Biblioteca/Mates">Matemáticas</a>
+            </li>
         </ul>
     </div>
 </body>
