--- a/Mates/index.html
+++ b/Mates/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>HTML</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+</head>
 
+<body>
+
+    <!-- HEADER -->
+	<div class="container">
+		<div class="Intro">
+                    <h1>La biblioteca</h1>
+					<h2>Bienvenido,</h2>
+                    <p>Esta es mi biblioteca personal en la que subire mis escritos sobre todo lo aprendido a lo largo de mi vida, especialmente 
+                            sobre ingenieria de telecomunicaciones y su forma de llevarlas a cabo material y matematicamente. La finalidad de esta web es aportar mi
+                            granito de arena a la informacion libre universal de forma totalmente gratuita especialmente a la comunidad hispano-hablante. 
+                            Traducire, sintetizare y utilizare la dialectica.</p>
+		</div>
+	</div>
+	<!-- /HEADER -->
+    <div class="container">
+        <h2>Contenido</h2>
+        <ul>
+            <li>
+              <a href="https://github.com/agutig/Biblioteca/edit/main/Mates/cociente_absoluto">Cociente Absoluto</a>
+            </li>
+       
+        </ul>
+    </div>
+</body>
+</html>
