--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <a href="https://agutig.com">Electrónica</a>
             </li>
             <li> 
-                <a href="https://agutig.github.io/Biblioteca/Acustica">Acustica</a>
+                <a href="https://agutig.github.io/Biblioteca/Acustica/">Acustica</a>
             </li>
 	     <li> 
-                <a href="https://agutig.github.io/Biblioteca/Mates">Matemáticas</a>
+                <a href="https://agutig.github.io/Biblioteca/Mates/">Matemáticas</a>
             </li>
         </ul>
     </div>
